@@ -28,3 +28,18 @@ multifreqpoly <- function(mat, nbreaks=100, col=1:ncol(mat), xlab="", ylab="Freq
     if(is.list(legend)) do.call(graphics::legend, legend)
 }
 
+freqpoly <- function(mat, nbreaks=15, col="black", xlab="", ylab="Frequency",
+                     type="l",append=FALSE,...)
+{
+    if(!is.numeric(mat)) stop("Warning: input data is not a numeric vector\n")
+    if(nbreaks > length(mat)) nbreaks=min(15,round(length(mat)/2))
+
+    breaks <- seq(min(mat,na.rm=TRUE), max(mat,na.rm=TRUE),
+              diff(range(mat,na.rm=TRUE))/nbreaks)
+    mids <- 0.5 * (breaks[-1] + breaks[-length(breaks)])
+    counts <- bincount(mat,breaks=breaks)
+    if(!append){plot(range(mids),c(0,max(counts)),type="n",xlab=xlab,ylab=ylab,...)}
+    lines(mids,counts,col=col,type=type,...)
+}
+
+
